feat(gardner): make gardner idempotent (#9)
feat(filter): enable name filter on list endpoints
